--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(localdb)\\Quasars;Initial Catalog=RealEstateDB;Integrated Security=True"
+  }
 }
