--- a/MVCRealEstate/appsettings.Development.json
+++ b/MVCRealEstate/appsettings.Development.json
@@ -4,5 +4,25 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(localdb)\\Quasars;Initial Catalog=RealEstateDB;Integrated Security=True"
+  },
+  "Security": {
+    "DefaultUser": {
+      "Password": "1"
+    },
+    "Password": {
+      "RequireDigit": false,
+      "RequiredLength": 1,
+      "RequiredUniqueChars": 1,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireNonAlphanumeric": false
+    },
+    "Lockout": {
+      "MaxFailedAccessAttempts": 5,
+      "DefaultLockoutTimeSpan": "00:05:00"
+    }
   }
 }
