--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -8,5 +8,24 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServer": "Data Source=(localdb)\\Quasars;Initial Catalog=RealEstateDB;Integrated Security=True"
+  },
+  "Security": {
+    "DefaultUser": {
+      "UserName": "admin@mvcre.com",
+      "Name": "BuiltIn Admin",
+      "Password": "!MVCre1234"
+    },
+    "Password": {
+      "RequireDigit": true,
+      "RequiredLength": 6,
+      "RequiredUniqueChars": 1,
+      "RequireLowercase": true,
+      "RequireUppercase": true,
+      "RequireNonAlphanumeric": true
+    },
+    "Lockout": {
+      "MaxFailedAccessAttempts": 5,
+      "DefaultLockoutTimeSpan": "00:05:00"
+    }
   }
 }
