--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -9,6 +9,15 @@
   "ConnectionStrings": {
     "SqlServer": "Data Source=(localdb)\\Quasars;Initial Catalog=RealEstateDB;Integrated Security=True"
   },
+  "EMail": {
+    "Server": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "SenderName": "MVCRealEstate",
+    "SenderEmail": "0ac1675cd2fafe",
+    "Account": "5cb817dc797df8",
+    "Password": "d3b20f3a7faf80",
+    "SSL": true
+  },
   "Security": {
     "DefaultUser": {
       "UserName": "admin@mvcre.com",
