--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(localdb)\\Quasars;Initial Catalog=RealEstateDB;Integrated Security=True"
+    "SqlServer": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=RealEstateDB;Integrated Security=True"
   },
   "EMail": {
     "Server": "sandbox.smtp.mailtrap.io",
