--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -36,5 +36,11 @@
       "MaxFailedAccessAttempts": 5,
       "DefaultLockoutTimeSpan": "00:05:00"
     }
+  },
+  "UseStorage": true,
+  "Storage": {
+    "BucketName": "infotechquasars",
+    "AccessKey": "AKIARZPTL7YSALWAOKZD",
+    "SecretKey": "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"
   }
 }
