--- a/MVCRealEstate/appsettings.Development.json
+++ b/MVCRealEstate/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=RealEstateDBCloneT;Integrated Security=True"
+    "SqlServer": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=RealEstateDBA;Integrated Security=True"
   },
   "Security": {
     "DefaultUser": {
