--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=RealEstateDB;Integrated Security=True"
+    "SqlServer": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=RealEstateDBA;Integrated Security=True"
   },
   "EMail": {
     "Server": "sandbox.smtp.mailtrap.io",
@@ -37,7 +37,7 @@
       "DefaultLockoutTimeSpan": "00:05:00"
     }
   },
-  "UseStorage": true,
+  "UseStorage": false,
   "Storage": {
     "BucketName": "infotechquasars",
     "AccessKey": "AKIARZPTL7YSALWAOKZD",
