amazon credentials deleted

--- a/MVCRealEstate/appsettings.json
+++ b/MVCRealEstate/appsettings.json
@@ -39,8 +39,8 @@
   },
   "UseStorage": false,
   "Storage": {
-    "BucketName": "infotechquasars",
-    "AccessKey": "AKIARZPTL7YSALWAOKZD",
-    "SecretKey": "kG2wluzyn3vUqr/MHhFClWKmbMocNjwpnVGPVTiV"
+    "BucketName": "example",
+    "AccessKey": "example",
+    "SecretKey": "example"
   }
 }
